--- a/.github/workflows/entities.yml
+++ b/.github/workflows/entities.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install spacy textblob_de
         run: (pip3 install spacy==2.2.4 textblob==0.15.3 textblob_de==0.4.3 nltk==3.8)
       - name: Install download de_core_news_md
-        run: (python3 -m spacy download de_core_news_md)
+        run: (python3 -m spacy download en_core_web_md)
       - name: Run entities
         run: (python3 entities.py)
       - name: Submit changes       
